--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script src="libraries/vue.js"></script>
     <script src="libraries/canvas-arrow.js"></script>
 
-    <title>n-body problem</title>
+    <title>SOL n-body problem</title>
   </head>
 
   <body>
@@ -39,15 +39,16 @@
     <script src="utils/Color.js"></script>
     <script src="utils/Vector2.js"></script>
 
-    <script src="core/input/InputHandler.js"></script>
-    <script src="core/input/MouseHandler.js"></script>
-    <script src="core/input/KeyboardHandler.js"></script>
-
-    <script src="core/render/Renderer.js"></script>
-    <script src="core/render/UniverseRenderer.js"></script>
-
     <script src="core/objects/Body.js"></script>
     <script src="core/objects/Universe.js"></script>
+
+    <script src="core/input/MouseHandler.js"></script>
+    <script src="core/input/KeyboardHandler.js"></script>
+    <script src="core/input/InputHandler.js"></script>
+
+    <script src="core/render/Renderer.js"></script>
+
+
 
     <script src="VueApp.js"></script>
   </body>
